<resources>
    <string name="app_name">TestApp1</string>
    <string name="text_hint">Please enter text</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>

    <string name="launch_map">Launch Map</string>
    <string name="launch_market">Launch Market</string>
    <string name="send_email">Send Email</string>
    <string name="send_Image">Send Image</string>
    <string name="show_toast">Show Toast</string>
    <string name="title_activity_java">JavaActivity</string>


</resources>
